# Matlab-Files

./: .gitignore  ACC_Figs  ACC_Figs.m  CMakeLists.txt  Corrected_Measurements.yaml  OpenNIdepthPoints.csv  Prediction.yaml  README.md  ROSFacePoints.csv  ROSPrediction.csv  RotOrth.m  Updates.yaml  cvx_opt.m  depthPoints.csv  depthPoints.yaml  depthPoints2.csv  depthPoints3.csv  depthPointsdefaultcalib.yaml  filter_ex.m  imaqtest.m  kalmanpoints_1.csv  kalmanpoints_2.csv  kinectpts.m  kinectpts.m~  lqr_solve.m  ols.m  ols.m~  points4.csv  rot.csv  rotplot_gans.m  sgfilter  sgfilter.m  sgolay.cpp  sgolay_myne.m  tr2rpy.m  trans.m
CASE-CODE/: CASESim.m  currentdata.csv  kinectdata.csv  kinectdataval.csv
Expt_Plots/: Plots.m
Expt_Plots/Expt I/: current.csv  current1.csv  current2.csv  current3.csv  fusion.csv  fusion1.csv  fusion2.csv  fusion3.csv  setpoint.csv  setpoint1.csv  setpoint3.csv  yhat.csv  yhat1.csv  yhat2.csv  yhat3.csv
Expt_Plots/Expt II/: Fusionyhat.csv  Fusionyhat1.csv  Fusionyhat2.csv  Fusionyhat3.csv  LQGyhat.csv  LQGyhat1.csv  LQGyhat2.csv  LQGyhat3.csv  current.csv  current1.csv  current2.csv  current3.csv  setpoint.csv  setpoint1.csv  setpoint2.csv  setpoint3.csv
Gast_ident_Sheffield/: State Space Free Canonical Training.mat  gas_ident.asv  gasdata.mat  heat_exchanger.m  pefilt_acse.m  step_response_31.mdl  step_response_32b.mdl
Vicon_Data/: midface.csv  vicon.m  vicon.m~
ident_data/: ACC_Ident.m  Multi_ident.m
ident_data/.svn/: wc.db
ident_data/Filtered GWN/: acf.csv  carimaFWGN.m  carimaFWGN.m~  crest.csv  fwgn.mat  inputUGWN3.csv  outputUGWN3.csv
ident_data/MLS Sequence/: FreeForm.mat  mlsident.sid  ss_test2.mat  ss_val1.mat  ss_val3.mat
ident_data/Matlab_Tuts/: CS2.m  VehicleDynamics.m  nlgrey.m
ident_data/Sawtooth Waveform/: Imp.mat  Impulse Response Fitting.mat  LQR_design.m  SSTest.mat  armax_acse.m  arx_acse.m  blwn_driven_out.mat  crosscorr_acse.m  gas_ident.m  gett_acse.m  idsim_acse.m  pe_acse.m  resid_acse.m  signal_detect.m  spectrum_acse.m  ss2states.mat  ss_test.mat  ss_val.mat  step_response_32b.mat  step_response_33.mdl  step_response_plot.m  sunspot_ARMA.m  xcorr_acse.m
kalman_data/: Corrected_Measurements.yaml  OpenNIdepthPoints.yaml  Prediction.csv  Prediction.yaml  ROSCorrected.csv  ROSCorrected.yaml  ROSFacePoints.csv  ROSFacePoints.yaml  ROSPrediction.csv  ROSPrediction.yaml  ROSUpdates.csv  ROSUpdates.yaml  ROSUpdates2.csv  Updates.csv  Updates.yaml  corrections.csv  rawmeasures.csv
mcall/: CMakeLists.txt  engdemo.cpp  sgolay.cpp
mcall/cmake/: FindMatlab.cmake
(+52 files in other folders)
